[workspace]
members = [
    "p0001_two_sum",
	"p0004_median_of_two_sorted_arrays",
	"p0011_container_with_most_water",
	"p0015_three_sum",
	"p0026_remove_duplicates_from_sorted_array",
	"p0033_search_in_rotated_sorted_array",
	"p0034_find_first_and_last_position_of_element_in_sorted_array",
	"p0041_first_missing_positive",
	"p0042_trapping_rain_water",
	"p0048_rotate_image",
	"p0053_maximum_subarray",
	"p0054_spiral_matrix",
	"p0055_jump_game",
	"p0056_merge_intervals",
	"p0062_unique_paths",
	"p0066_plus_one",
	"p0073_set_matrix_zeroes",
	"p0075_sort_colors",
	"p0078_subsets",
]
